// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage 1-ProductImage debe de mostrar el componente con el nombre del producto 1 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="https://ola.jpg"
/>
`;

exports[`ProductImage 2-ProductImage debe de mostrar el componente correctamente con el titulo personalizado 1 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
